# Learnbery

./: .gitignore  CHANGELOG.md  Learnbery.cabal  README.md  dbSetup.sh  init.sql  server.yaml
apps/: LoadUtil.hs  Main.hs
public/css/: error.css  main.css
public/js/app/: catalogFilters.js  catalogLoader.js  fortune.js  init.js  panels.js  popup.js  protocol.js  search.js
public/js/core/: ajax.js  bus.js  router.js  types.js
src/: Config.hs  Loader.hs  Main.hs  Server.hs
src/Config/: BD.hs  Common.hs  Pool.hs  Postgre.hs  Storage.hs
src/HTML/: Error.hs  Main.hs
src/Loader/: ArgsParser.hs  File.hs  Interactive.hs  Queries.hs  Types.hs
src/Server/: Core.hs  Router.hs  Utils.hs
src/Storage/: Migrator.hs  Queries.hs  RawTypes.hs  Schema.hs  Service.hs  Types.hs
