cabal-version:      3.0
name:               Learnbery
version:            0.0.0.0
-- synopsis:
-- description:
license:            GPL-2.0-only
license-file:       LICENSE
author:             Niko
-- maintainer:
-- copyright:
category:           Web
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common config
    ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
    default-language: Haskell2010

executable Learnbery
    import:           config
    main-is:          Main.hs
    other-modules:
                      Config
    default-extensions:
                        TemplateHaskell
    build-depends:    
                        aeson,
                        base,
                        --base64-bytestring,
                        --bytestring,
                        containers,
                        --directory,
                        entropy,
                        -- exceptions,
                        --filepath,
                        http-types,
                        lens,
                        lucid,
                        mtl,
                        -- stm,
                        text,
                        -- time,
                        wai,
                        -- wai-app-static, 
                        -- wai-extra, 
                        -- wai-websockets, 
                        warp,
                        -- warp-tls, 
                        yaml
    hs-source-dirs:   src
