cabal-version:      3.0
name:               Learnbery
version:            0.0.0.0
-- synopsis:
-- description:
license:            GPL-2.0-only
license-file:       LICENSE
author:             Niko
-- maintainer:
-- copyright:
category:           Web
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common configApp
    ghc-options:        -Wall -threaded -rtsopts -with-rtsopts=-N
    default-language:   Haskell2010
    hs-source-dirs:     apps

common configLib
    ghc-options:        -Wall -threaded
    default-language:   Haskell2010
    default-extensions: TemplateHaskell, 
                        OverloadedStrings
    hs-source-dirs:     src

library shared
    import:         configLib
    exposed-modules:
                    Config, Config.Postgre, Config.Common, Config.Pool, Config.Storage,
                    Loader, Loader.ArgsParser, Loader.File, Loader.Interactive, Loader.Queries, Loader.Types,
                    Server, Server.Core, Server.Router, Server.Utils,
                    Storage.Queries, Storage.Schema, Storage.Types, Storage.Service,
                    HTML.Main, HTML.Error
    build-depends:    
                    aeson,
                    base,
                    beam-core,
                    beam-postgres,
                    -- beam-migrate,
                    --base64-bytestring,
                    bytestring,
                    containers,
                    directory,
                    exceptions,
                    filepath,
                    http-types,
                    lens,
                    lucid,
                    mtl,
                    optparse-applicative,
                    resource-pool,
                    -- stm,
                    text,
                    -- time,
                    wai,
                    wai-middleware-static, 
                    -- wai-extra, 
                    -- wai-websockets, 
                    warp,
                    -- warp-tls, 
                    yaml


executable Learnbery
    import:         configApp
    main-is:        Main.hs
    build-depends:  base,
                    Learnbery:shared

executable Loader
    import:         configApp
    main-is:        LoadUtil.hs
    build-depends:  base,
                    Learnbery:shared